--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Age Calculator</title>
+    <title>Age calculator</title>
   </head>
   <body>
     <div class="backbtn">
